# ros2_demo_01

custom_interfaces/: CMakeLists.txt  package.xml
custom_interfaces/srv/: FaceDetector.srv
demo_cpp/: CMakeLists.txt  package.xml
demo_cpp/src/: cpp_node.cpp  demo_cpp_client.cpp  demo_cpp_service.cpp  person.cpp  turtlesim_pose_cpptopic.cpp  turtlesim_pose_sub.cpp
demo_py/: package.xml  setup.py
demo_py/demo_py/: face_detect_client.py  face_detect_service.py  learn_face_detect.py  person.py  python_node.py
